# game

./: CMakeLists.txt  CMakeLists.txt.user.d6eed6f  DataSender.cpp  DataSender.h  Main.qml  Myshapes.qml  Shapegenerator.cpp  Shapegenerator.h  Shapegenrator.cpp  Shapegenrator.h  Shapes.cpp  Shapes.h  main.cpp  viewmodel.cpp  viewmodel.h
